--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
-        <activity
-            android:name=".ui.instruments.InstrumentsActivity"
-            android:label="@string/app_name">
+        <activity android:name=".ui.instruments.InstrumentsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
