--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath Deps.kotlinGradlePlugin
         classpath Deps.gradleVersionsPlugin
         classpath Deps.dexcountGradlePlugin
+        classpath Deps.kotlinAllOpenPlugin
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
